--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Lexend:wght@400;500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
 @font-face {
   font-family: "Benzin";
@@ -25,7 +26,7 @@
 }
 
 html {
-  font-family: Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue;
+  font-family: 'Inter', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue;
   font-feature-settings: "ss01";
 }
 
