--- a/app/styles/night-owl.css
+++ b/app/styles/night-owl.css
@@ -45,7 +45,6 @@ code[class*="language-"] ::selection {
 }
 
 @media print {
-
   code[class*="language-"],
   pre[class*="language-"] {
     text-shadow: none;
@@ -59,13 +58,19 @@ pre[class*="language-"] {
   overflow: auto;
 }
 
-:not(pre)>code[class*="language-"],
+.hero:not(pre) > code[class*="language-"],
+pre[class*="language-"] {
+  color: white;
+  background: #0a101f/80;
+}
+
+.body:not(pre) > code[class*="language-"],
 pre[class*="language-"] {
   color: white;
   background: #011627;
 }
 
-:not(pre)>code[class*="language-"] {
+:not(pre) > code[class*="language-"] {
   padding: 0.1em;
   border-radius: 0.3em;
   white-space: normal;
