--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1,49 +1,18 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Lexend:wght@400;500&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
-  font-family: "Benzin";
-  src: url("/fonts/Benzin/Benzin-Regular.ttf");
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Benzin";
-  src: url("/fonts/Benzin/Benzin-Medium.ttf");
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Benzin";
-  src: url("/fonts/Benzin/Benzin-Bold.ttf");
-  font-weight: 700;
-  font-style: normal;
-}
-
 html {
-  font-family: 'Inter', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue;
-  font-feature-settings: "ss01";
+  font-family: 'Inter var', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue;
+  font-feature-settings: "cv02","cv03","cv04","cv11";
 }
 
 .font-display {
   font-family: Lexend, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue,
     Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-    font-feature-settings: "ss01";
-}
-
-.ss01 {
-  -moz-font-feature-settings: "ss01" on;
-  -o-font-feature-settings: "ss01" on;
-  -webkit-font-feature-settings: "ss01" on;
-  font-feature-settings: "ss01" on;
-  font-kerning: normal;
 }
 
 .body pre > code {
