--- a/app/styles/fonts.css
+++ b/app/styles/fonts.css
@@ -25,7 +25,7 @@
   font-display: block;
   font-style: normal;
   font-named-instance: 'Regular';
-  src: url('/fonts/Inter-roman.var.woff2') format('woff2');
+  src: url('/fonts/Inter/Inter-roman.var.woff2') format('woff2');
 }
 
 @font-face {
@@ -34,5 +34,5 @@
   font-display: block;
   font-style: italic;
   font-named-instance: 'Italic';
-  src: url('/fonts/Inter-italic.var.woff2') format('woff2');
+  src: url('/fonts/Inter/Inter-italic.var.woff2') format('woff2');
 }
