--- a/app/styles/docs.css
+++ b/app/styles/docs.css
@@ -4,6 +4,12 @@
   }
 
   & :is(:where(pre):has(code)) > code {
-      @apply font-normal !important;
+    @apply font-normal !important;
+  }
+}
+
+#article-main:not(:has(h3)) {
+  & :is(h2) {
+    @apply flex whitespace-pre-wrap text-2xl font-bold mb-4 text-[#10172A] dark:text-[#e2e8f0] !important;
   }
 }
