--- a/app/styles/docs.css
+++ b/app/styles/docs.css
@@ -6,10 +6,22 @@
   & :is(:where(pre):has(code)) > code {
     @apply font-normal !important;
   }
+
+  & :is(:where(h2):has(code)) > code {
+    @apply text-2xl font-bold !important;
+  }
+
+  & :is(:where(h3):has(code)) > code {
+    @apply text-xl font-semibold !important;
+  }
 }
 
 #article-main:not(:has(h3)) {
   & :is(h2) {
     @apply flex whitespace-pre-wrap text-2xl font-bold mb-4 text-[#10172A] dark:text-[#e2e8f0] !important;
+  }
+
+  & :is(:where(h2):has(code)) > code {
+    @apply text-xl font-bold !important;
   }
 }
