--- a/app/styles/fonts.css
+++ b/app/styles/fonts.css
@@ -20,6 +20,13 @@
 }
 
 @font-face {
+  font-family: "Nasa";
+  src: url("/fonts/Nasa/nasalization-rg.otf");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
   font-family: 'Inter var';
   font-weight: 100 900;
   font-display: block;
