--- a/app/styles/docs.css
+++ b/app/styles/docs.css
@@ -25,3 +25,17 @@
     @apply text-xl font-bold !important;
   }
 }
+
+.dark section[data-remix-pwa-hero]::before {
+  position: absolute !important;
+  z-index: -1;
+  content: "";
+  top: 0%;
+  bottom: 10%;
+  width: 150%;
+  left: -25%;
+  overflow: hidden;
+  background: linear-gradient(83.21deg,#3245ff 0%,#bc52ee 100%);
+  -webkit-mask-image: radial-gradient(rgba(0,0,0,.45),transparent 70%);
+  mask-image: radial-gradient(rgba(0,0,0,.45),transparent 70%);
+}
