--- a/app/styles/docs.css
+++ b/app/styles/docs.css
@@ -70,12 +70,19 @@ body {
   position: absolute !important;
   z-index: -1;
   content: "";
-  top: 0%;
+  top: 15%;
   bottom: 10%;
-  width: 150%;
-  left: -25%;
+  width: 200%;
+  left: -50%;
   overflow: hidden;
-  background: linear-gradient(83.21deg,#3245ff 0%,#bc52ee 100%);
+  /* background: linear-gradient(83.21deg,#3245ff 0%,#bc52ee 100%);
   -webkit-mask-image: radial-gradient(rgba(0,0,0,.45),transparent 70%);
-  mask-image: radial-gradient(rgba(0,0,0,.45),transparent 70%);
+  mask-image: radial-gradient(rgba(0,0,0,.45),transparent 70%); */
+
+  user-select: none;
+  height: 105%;
+  filter: blur(40px);
+  background: url("/images/hero-img.png") no-repeat center center;
+  background-color: rgba(15, 23, 42, .6);
+  background-blend-mode: darken;
 }
