--- a/app/styles/code.css
+++ b/app/styles/code.css
@@ -1,52 +1,98 @@
-pre {
-  overflow-x: auto;
+.token.tag,
+.token.class-name,
+.token.selector,
+.token.selector .class,
+.token.selector.class,
+.token.function {
+  @apply text-pink-400;
 }
 
-/**
- * Inspired by gatsby remark prism - https://www.gatsbyjs.com/plugins/gatsby-remark-prismjs/
- * 1. Make the element just wide enough to fit its content.
- * 2. Always fill the visible space in .code-highlight.
- */
-.code-highlight {
-  float: left; /* 1 */
-  min-width: 100%; /* 2 */
+.token.attr-name,
+.token.keyword,
+.token.module,
+.token.rule,
+.token.pseudo-class,
+.token.important {
+  @apply text-slate-300;
 }
 
-.code-line {
-  display: block;
-  padding-left: 16px;
-  padding-right: 16px;
-  margin-left: -16px;
-  margin-right: -16px;
-  border-left: 4px solid rgba(0, 0, 0, 0); /* Set placeholder for highlight accent border color to transparent */
+.token.attr-value,
+.token.class,
+.token.string {
+  @apply text-sky-300;
 }
 
-.code-line.inserted {
-  background-color: rgba(16, 185, 129, 0.2); /* Set inserted line (+) color */
+.token.punctuation,
+.token.attr-equals {
+  @apply text-slate-500;
 }
 
-.code-line.deleted {
-  background-color: rgba(239, 68, 68, 0.2); /* Set deleted line (-) color */
+.token.attr-value * {
+  @apply text-sky-300;
 }
 
-.highlight-line {
-  margin-left: -16px;
-  margin-right: -16px;
-  background-color: rgba(55, 65, 81, 0.5); /* Set highlight bg color */
-  border-left: 4px solid rgb(59, 130, 246); /* Set highlight accent border color */
+.token.attr-value .attr-equals,
+.token.attr-value .attr-equals + .punctuation,
+.token.attr-value > .punctuation:last-child {
+  @apply text-slate-500;
 }
 
-.line-number::before {
-  display: inline-block;
-  width: 1rem;
-  text-align: right;
-  margin-right: 16px;
-  margin-left: -8px;
-  color: rgb(156, 163, 175); /* Line number color */
-  content: attr(line);
+.token.property {
+  @apply text-sky-300;
 }
 
-.task-list-item {
-  margin-top: 0;
-  margin-bottom: 0;
+.token.unit {
+  @apply text-teal-200;
+}
+
+.language-shell .token:not(.comment),
+.token.atapply .token:not(.rule):not(.important):not(.punctuation) {
+  color: inherit;
+}
+
+.language-css .token.function {
+  @apply text-teal-200;
+}
+
+.token.comment,
+.token.operator,
+.token.combinator {
+  @apply text-slate-400;
+}
+
+.token.unchanged {
+  @apply block;
+}
+
+.token.prefix.inserted {
+  @apply hidden;
+}
+.token.prefix.deleted {
+  @apply hidden;
+}
+
+.token.deleted,
+.token.inserted {
+  @apply relative block pl-8 pr-5 border-l-4 -mx-9 before:absolute before:top-0 before:left-4;
+}
+
+.token.inserted {
+  @apply bg-teal-400/[0.15] border-teal-400 before:content-['+'] before:text-teal-400;
+}
+
+.token.deleted {
+  @apply bg-rose-500/[0.15] border-rose-400 before:content-['-'] before:text-rose-400;
+}
+
+pre[class^='language-diff-'] {
+  @apply flex px-9;
+}
+
+pre[class^='language-diff-'] > code {
+  @apply flex-none min-w-full;
+}
+
+/* targets the `&shy;` in a code example */
+span.code-highlight.bg-code-highlight:has(> span[title*='\AD']) {
+  @apply bg-pink-500/10 text-pink-400 mx-[1px];
 }
