--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -36,6 +36,40 @@ body {
   background-color: var(--background-color);
 }
 
-.dark :not(.placeholder-index) {
-  color-scheme: dark;
+::view-transition-group(root) {
+  animation-duration: 1.25s;
+}
+::view-transition-new(root),
+::view-transition-old(root) {
+  mix-blend-mode: normal;
+}
+
+::view-transition-new(root) {
+  animation-name: reveal-light;
+}
+
+::view-transition-old(root),
+.dark::view-transition-old(root) {
+  animation: none;
+}
+.dark::view-transition-new(root) {
+  animation-name: reveal-dark;
+}
+
+@keyframes reveal-dark {
+  from {
+    clip-path: polygon(-30% 0, -30% 0, -15% 100%, -10% 115%);
+  }
+  to {
+    clip-path: polygon(-30% 0, 130% 0, 115% 100%, -10% 115%);
+  }
+}
+
+@keyframes reveal-light {
+  from {
+    clip-path: polygon(130% 0, 130% 0, 115% 100%, 110% 115%);
+  }
+  to {
+    clip-path: polygon(130% 0, -30% 0, -15% 100%, 110% 115%);
+  }
 }
