--- a/app/styles/fonts.css
+++ b/app/styles/fonts.css
@@ -1,43 +1,5 @@
 /* Fonts Stylesheet */
 
-/* -- Inter Font -- */
-@font-face {
-  font-family: "Inter var";
-  font-weight: 100 900;
-  font-display: block;
-  font-style: normal;
-  font-named-instance: "Regular";
-  src: url("/fonts/Inter/Inter-roman.var.woff2") format("woff2");
-}
-
-@font-face {
-  font-family: "Inter var";
-  font-weight: 100 900;
-  font-display: block;
-  font-style: italic;
-  font-named-instance: "Italic";
-  src: url("/fonts/Inter/Inter-italic.var.woff2") format("woff2");
-}
-
-/* -- FiraCode Font -- */
-@font-face {
-  font-family: "Fira Code";
-  font-weight: 400;
-  font-display: block;
-  font-style: normal;
-  font-named-instance: "Regular";
-  src: url("/fonts/FiraCode/FiraCode-Regular.woff2") format("woff2");
-}
-
-@font-face {
-  font-family: "Fira Code";
-  font-weight: 500;
-  font-display: block;
-  font-style: normal;
-  font-named-instance: "Medium";
-  src: url("/fonts/FiraCode/FiraCode-Medium.ttf");
-}
-
 /* -- JetBrains Mono Font -- */
 @font-face {
   font-family: "JetBrains Mono";
@@ -55,14 +17,6 @@
   font-style: normal;
   font-named-instance: "Medium";
   src: url("/fonts/JetBrains/JetBrainsMono-Medium.woff2") format("woff2");
-}
-
-/* -- SpaceTime Font -- */
-@font-face {
-  font-family: "Space";
-  font-weight: 400;
-  font-style: normal;
-  src: url("/fonts/Space/Space.woff2") format("woff2");
 }
 
 /* -- Benzin Font -- */
@@ -114,29 +68,23 @@
   src: url("/fonts/Nunito/Nunito-Italic.ttf") format("truetype");
 }
 
-/* -- Styrene Font -- */
+/* -- Geist Font -- */
 @font-face {
-  font-family: Styrene;
-  src: url("/fonts/Styrene/Styrene-Regular.otf") format("opentype");
-  font-display: swap;
-  font-weight: 400;
-  font-style: normal
+  font-family: "Geist";
+  font-weight: 100 900;
+  font-display: block;
+  font-style: normal;
+  font-named-instance: "Regular";
+  src: url("/fonts/Geist/GeistVF.woff2") format("woff2");
 }
 
 @font-face {
-  font-family: Styrene;
-  src: url("/fonts/Styrene/Styrene-Medium.otf") format("opentype");
-  font-display: swap;
-  font-weight: 500;
-  font-style: normal
-}
-
-@font-face {
-  font-family: Styrene;
-  src: url("/fonts/Styrene/Styrene-Bold.otf") format("opentype");
-  font-display: swap;
-  font-weight: 700;
-  font-style: normal
+  font-family: "Geist Mono";
+  font-weight: 100 900;
+  font-display: block;
+  font-style: italic;
+  font-named-instance: "Italic";
+  src: url("/fonts/Geist/GeistMonoVF.woff2") format("woff2");
 }
 
 /* Feel free to add more fonts here! */
